ide-redesign/styles/_dropdown.scss
/* Dropdown Button */
button.dropbtn {
  background-color: #fff;
  border: 1px solid $teal-main;
  color: $teal-main;
  cursor: pointer;
  display: inline;
  font-family: poppins_regular;
  font-size: 14px;
  padding: 7px 16px;
  position: relative;
  text-align: left;
  width: 200px;
  &:before {
    border: 8px solid transparent;
    border-top: 8px solid $teal-main;
    content:" ";
    position: absolute;
    right: 12px;
    top: 13px;
  }
  &:hover, &:focus {
    background-color: rgba(0, 190, 164, 0.8);
    border-color: rgba(0, 190, 164, 0.8);
    color: white;
    &:before {
      border-top: 8px solid #fff;
    }
    &.small {
      width: 4em;
      &:before {
        border: 8px solid transparent;
        border-top: 8px solid $teal-main;
        content:" ";
        position:absolute;
        right: 12px;
        top: 5px;
      }
      &:hover, &:focus {
        background-color: rgba(0, 190, 164, 0.8);
        border-color: rgba(0, 190, 164, 0.8);
        color: white;
        &:before {
          border-top: 8px solid #fff;
        }
      }
    }
  }
}

.dropdown {
  border-radius: 2px;
  display: inline-block;
  opacity: 1;
  position: relative;
  &.inactive {
    background: $grey-light;
    border: 2px solid $grey-mid;
  }
}

select.dropdown-num {
  background: transparent;
  border: transparent;
  font-family: poppins_light;
  height: 25px;
  padding-left: 10px;
  width: 56px;
  &.inactive {
    background: $grey-light;
    border: $grey-mid;
  }
}

/* Dropdown content (hidden by default) */
.dropdown-content {
  background-color: #f9f9f9;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  display: none;
  min-width: 160px;
  position: absolute;
  width: 100%;
  /* Links inside the dropdown */
  select {
    border: none;
    display: table;
    font-size: 11px;
    margin-bottom: -22px;
    padding-bottom: 2px;
    padding-top: 0;
    width: 200px;
    option {
      color: black;
      cursor: pointer;
      display: block;
      font-family: poppins_regular;
      font-size: 10px;
      opacity: 1;
      padding: 8px 16px;
      text-decoration: none;
      &:hover {
        background-color: $grey-light;
        color: rgba(0, 0, 0, 0.9);
      }
      &:active, &:focus {
        background-color: $grey-mid;
        color: rgba(0, 0, 0, 0.9);
      }
    }
  }
  ul {
    border: none;
    display: table;
    font-size: 11px;
    height: 22px;
    padding-bottom: 2px;
    padding-left: 28px;
    padding-top: 0;
    width: 200px;
    > li, span, a {
      color: black;
      cursor: pointer;
      display: block;
      font-family: poppins_regular;
      font-size: 10px;
      opacity: 1;
      padding: 8px 16px;
      text-decoration: none;
      &:hover {
        background-color: $grey-light;
        color: rgba(0, 0, 0, 0.9);
      }
    }
  }
  &.show {
    display: block;
  }
}

